# Planar

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.sh  dependencies.sh  readme.md
compress/: CMakeLists.txt  block_size_nvme.cpp  gzip_try.cpp  ligra_plus_compress.cpp  lz4_try.cpp  nvme_ssd.cpp  snappy_try.cpp
compress/gzip/: decompress.hpp
core/: CMakeLists.txt  planar_system.cpp  planar_system.h
core/apis/: pie.h  pie_app_factory.h  planar_app_base.h  planar_app_base_op.h  planar_app_factory.h  planar_app_group_base.h  planar_app_op.h
core/apps/: clique_five_app.h  clique_four_app.h  coloring_app.cpp  coloring_app.h  coloring_app_op.h  gnn_app.cpp  gnn_app.h  k_hop_app.cpp  k_hop_app.h  mst_app.cpp  mst_app.h  mst_app_op.h  pagerank_app.cpp  pagerank_app.h  pagerank_app_op.h  path_count.h  randomwalk_app.cpp  randomwalk_app.h  randomwalk_app_op.h  sample_app.cpp  sample_app.h  sample_app_test.cpp  sssp_app.cpp  sssp_app.h  sssp_app_op.h  sssp_asp_app.cpp  sssp_asp_app.h  test.h  triangle_app.h  wcc_app.cpp  wcc_app.h  wcc_app_op.h  wcc_app_test.cpp  wcc_asp_app.cpp  wcc_asp_app.h  wcc_edgecut_app.cpp  wcc_edgecut_app.h  wcc_group.cpp  wcc_group.h  wcc_nvme_app.cpp  (+1 more)
core/common/: Scheduler.h  bitmap.h  bitmap_no_ownership.h  bitmap_no_ownership_test.cpp  bitmap_test.cpp  blocking_queue.h  blocking_queue_test.cpp  component.h  config.h  graph_metadata.h  message_queue.h  types.cpp  types.h
core/components/: component.h  discharger.h  executer.cpp  executer.h  executor.cpp  executor.h  executor2.h  executor_op.h  loader.h  loader_op.h  loader_op2.h
core/data_structures/: buffer.h  graph_metadata.cpp  graph_metadata.h  graph_metadata_test.cpp  serializable.h  serializable_graph.h  serialized.h
core/io/: basic_reader.cpp  basic_reader.h  basic_reader_test.cpp  basic_writer.cpp  basic_writer.h  basic_writer_test.cpp  csr_edge_block_reader.h  csr_edge_block_reader2.h  csr_edge_block_reader_test.cpp  csr_reader.cpp  csr_reader.h  csr_reader_test.cpp  csr_writer.cpp  csr_writer.h  csr_writer_test.cpp  discharger.h  labeled_csr_reader.cpp  labeled_csr_reader.h  labeled_csr_reader_test.cpp  loader.h  miniclean_csr_reader.cpp  miniclean_csr_reader.h  miniclean_csr_reader_test.cpp  mutable_csr_reader.cpp  mutable_csr_reader.h  mutable_csr_writer.cpp  mutable_csr_writer.h  mutable_csr_writer_test.cpp  pram_block_reader.cpp  pram_block_reader.h  pram_block_writer.cpp  pram_block_writer.h  reader.cpp  reader.h  reader_test.cpp  reader_writer.h  writer.cpp  writer.h  writer_test.cpp
core/message_stores/: bsp_messgae_store.h  message_store_base.h
core/scheduler/: edge_buffer.h  edge_buffer2.h  graph_manager.h  graph_state.h  message.cpp  message.h  message_hub.h  message_test.cpp  scheduler.cpp  scheduler.h  scheduler2.cpp  scheduler2.h  scheduler_test.cpp  subgraph_state.h
core/tests/: CMakeLists.txt  empty_test.cpp  lz4_test.cpp  reader_test.cpp  snappy_test.cpp
core/update_stores/: bsp_update_store.h  update_store_base.h
core/util/: atomic.h  bitmap.h  bitmap_test.cpp  file.h  logging.h  logging_test.cpp  pointer_cast.h
miniclean/: CMakeLists.txt  miniclean_app_base.h
miniclean/apps/: CMakeLists.txt  preprocessor.cpp  refactor_rule_discovery.cpp  rule_discovery.cpp  star_pattern_matching.cpp  stat.py
miniclean/common/: config.h  error_detection_config.h  miniclean_config.h  types.h
miniclean/components/: path_matcher.cpp  path_matcher.h  path_matcher_test.cpp
miniclean/graphs/: miniclean_csr_graph.cpp  miniclean_csr_graph.h  miniclean_csr_graph_config.h
miniclean/io/: miniclean_csr_reader.cpp  miniclean_csr_reader.h  miniclean_csr_reader_test.cpp  miniclean_graph_read.cpp  miniclean_graph_reader.cpp  miniclean_graph_reader.h  miniclean_graph_reader_test.cpp
miniclean/messages/: message.cpp  message.h  message_hub.h
miniclean/modules/: io_manager.cpp  io_manager.h  loader.h  scheduler.cpp  scheduler.h
miniclean/tests/: CMakeLists.txt
nvme/: CMakeLists.txt  check_pram_block.cpp  pram_block.cpp  pram_nvme_system.h
nvme/apis/: array.h  array_ptr.h  block.h  block_api.h  block_api_base.h
nvme/apps/: gnn_nvme_app.h  gnn_nvme_int_app.h  k-hop_app.h  pagerank_nvme_app.h  pagerank_nvme_pull_app.h  pagerank_vc_nvme_app.h  random_walk_app.h  sssp_app.h  wcc_nvme.cpp  wcc_nvme_app.cpp  wcc_nvme_app.h  wcc_nvme_precomputing_app.h
nvme/common/: config.h
nvme/components/: component.h  discharge.h  executor.h  loader.h
nvme/data_structures/: memory_buffer.h  neighbor_hop.h
nvme/io/: io_uring_reader.h  pram_block_reader.cpp  pram_block_reader.h  pram_block_writer.cpp  pram_block_writer.h  reader_writer.h
nvme/partition/: converter.h  edge_equal_block_partition.h  vertex_equal_block_partition.h
nvme/precomputing/: basic.h  neighbor_hop_info.h  neighbor_info.h  two_hop_neighbor.h
nvme/run/: check_block.cpp  check_pram_block.cpp  gnn_nvme.cpp  k_hop_nvme.cpp  pagerank_nvme.cpp  partition.cpp  pram_block.cpp  precomputing.cpp  sssp_nvme.cpp  wcc_nvme.cpp
nvme/scheduler/: graph_state.h  message.cpp  message.h  message_hub.h  scheduler.cpp  scheduler.h
nvme/tests/: CMakeLists.txt  aio_test.cpp
nvme/update_stores/: nvme_update_store.h
planar/: CMakeLists.txt  color.cpp  convert.cpp  count.cpp  generate_is_in_graph_bitmap.cpp  gnn.cpp.bak  khop.cpp  khop.cpp.bak  mst.cpp  pagerank.cpp  partitioner.cpp  plaanr_check.cpp  planar_check.cpp  planar_continue_partition.cpp  planar_cut_subgraph.cpp  random_walk.cpp  sssp.cpp  test.cpp  wcc.cpp
tools/: CMakeLists.txt
tools/common/: adapter.cpp  adapter.h  data_structure.cpp  data_structures.cpp  data_structures.h  io.cpp  io.h  tools_types.h  types.h  yaml_config.h
tools/docs/: graph_converter.md  graph_partitioner.md
tools/graph_convert/: CMakeLists.txt  graph_convert.cpp
tools/graph_converter/: CMakeLists.txt  graph_converter.cpp
tools/graph_partition/: CMakeLists.txt  graph_partition.cpp
tools/graph_partitioner/: CMakeLists.txt  graph_partitioner.cpp
tools/tests/: CMakeLists.txt
tools/tools_common/: data_structures.h  io.cpp  io.h  types.h  yaml_config.h
utils/: iotop.py
(+142 files in other folders)
